force-app/main/default/objects/Treatment_Course_Engagement__c/Treatment_Course_Engagement__c.object-meta.xml
<CustomObject>
    <label>Treatment Course Engagement</label>
    <nameField>
        <label>Treatment Course Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treatment Course Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>