force-app/main/default/objects/Treatment_Course_Engagement__c/fields/Current_Patient__c.field-meta.xml
<CustomField>
    <fullName>Current_Patient__c</fullName>
    <formula>$User.Patient_Id__c == CASESAFEID(Patient__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Patient</label>
    <type>Checkbox</type>
</CustomField>