force-app/main/default/objects/Treatment_Course_Engagement__c/fields/Current_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Patient_Id__c</fullName>
    <formula>$User.Patient_Id__c = CASESAFEID(Patient__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Patient Id</label>
    <type>Checkbox</type>
</CustomField>