force-app/main/default/objects/Treatment_Course_Engagement__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatment_Couse_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>