force-app/main/default/objects/Treatment_Course_Engagement__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Treatment_Couse_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>