force-app/main/default/objects/Treatment_Course_Engagement__c/fields/test2__c.field-meta.xml
<CustomField>
    <fullName>test2__c</fullName>
    <formula>Patient__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test2</label>
    <type>Text</type>
</CustomField>