force-app/main/default/objects/Treatment_Course_Engagement__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>$User.Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <type>Text</type>
</CustomField>