force-app/main/default/objects/Treatment_Course_Engagement__c/fields/Treatment_Course_Template__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Course_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Course Template</label>
    <referenceTo>Treatment_Course_Template__c</referenceTo>
    <relationshipName>Treatment_Couse_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>