force-app/main/default/objects/Treatment_Course_Engagement__c/listViews/My_Engagements.listView-meta.xml
<ListView>
    <fullName>My_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Doctor__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Patient__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Patient_Id__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Engagements</label>
</ListView>